--- a/fenty-skin.html
+++ b/fenty-skin.html
@@ -105,9 +105,10 @@
             <div class="right-footer">
                 <p>Følg oss</p>
                 <div class="social-media">
-                    <div class="instagram"><a href="https://instagram.com/fentynorge"><i
+                    <div class="instagram"><a href="https://instagram.com/fentynorge" aria-label="instagram link"><i
                                 class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="facebook"><i class="fa-brands fa-facebook fa-2xl"></i></div>
+                    <div class="twitter"><a href="https://x.com/fentynorge" aria-label="Twitter/X link"><i
+                                class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
                 </div>
             </div>
         </div>
