fetching alt text
Updated fetching alt text to images

--- a/contact.html
+++ b/contact.html
@@ -97,8 +97,8 @@
                             <div class="form-error"></div>
                         </div>
                         <div class="submit-form">
-                            <label for="submit">Send inn kontaktskjema:</label>
-                            <button type="submit" id="submit">Send inn</button>
+                            <!-- <label for="submit">Send inn kontaktskjema:</label> -->
+                            <button type="submit" id="submit">Send inn kontaktskjema</button>
                         </div>
                     </fieldset>
                 </form>
