--- a/contact.html
+++ b/contact.html
@@ -78,22 +78,25 @@
                         <legend>Fyll ut skjemaet</legend>
                         <div class="input-control">
                             <label for="name">Navn:*</label>
-                            <input type="text" name="name" id="name" required>
+                            <input type="text" name="name" id="name" placeholder="Navn på over 5 karakterer.." required>
                             <div class="form-error"></div>
                         </div>
                         <div class="input-control">
                             <label for="email">Email:*</label>
-                            <input type="email" name="email" id="email" required>
+                            <input type="email" name="email" id="email" placeholder="Skriv inn din email adresse her.."
+                                required>
                             <div class="form-error"></div>
                         </div>
                         <div class="input-control">
                             <label for="subject">Emne:*</label>
-                            <input type="text" name="subject" id="subject" required>
+                            <input type="text" name="subject" id="subject"
+                                placeholder="Emnet må være på over 15 karkaterer.." required>
                             <div class="form-error"></div>
                         </div>
                         <div class="input-control">
                             <label for="message">Melding:*</label>
-                            <textarea name="message" id="message" required></textarea>
+                            <textarea name="message" id="message"
+                                placeholder="Meldingen din må være på over 25 karakterer.." required></textarea>
                             <div class="form-error"></div>
                         </div>
                         <div class="submit-form">
