Side scroll on nav fix
a side scroll issue came up, so did some changes to the hamburger menu to fix it

--- a/discography.html
+++ b/discography.html
@@ -45,8 +45,8 @@
                 <ul>
                     <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
-                    <li class="sub-menu-start"><a href="#" aria-haspopup="true" aria-expanded="false">VAREMERKER
-                            &#11206;</a>
+                    <li class="sub-menu-start" aria-haspopup="true" aria-expanded="false">VAREMERKER
+                        &#11206;
                         <ul class="sub-menu">
                             <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
                             <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
