--- a/fenty-skin.html
+++ b/fenty-skin.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
-    <meta name="description"
-        content="Velkommen til Fenty Norge. Her finner du informasjon om Rihannas varemerke Fenty Skin">
+    <meta name="description" content="Her finner du informasjon om Rihannas varemerke Fenty Skin">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, blog">
     <title>Fenty.no - Fenty Skin</title>
     <link rel="stylesheet" href="/css/index.css">
@@ -47,7 +46,7 @@
                     <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
                     <li class="sub-menu-start" aria-haspopup="true" aria-expanded="false">VAREMERKER
-                        &#11206;
+                        &#9660;
                         <ul class="sub-menu">
                             <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
                             <li class="active"><a href="fenty-skin.html">-FENTY SKIN</a></li>
