Unicode test successful
Implemented on all pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
                     <li class="sub-menu-start" aria-haspopup="true" aria-expanded="false">VAREMERKER
-                        &#11206;
+                        &#9660;
                         <ul class="sub-menu">
                             <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
                             <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
@@ -69,9 +69,9 @@
             <div class="center-site-info">
                 <img class="scroll-down" src="/img/skroll-ned-ny.png" alt="skroll ned på siden for nyheter">
                 <p class="center-site-info-header">Side Introduksjon</p>
-                <div class="horizontal-line"></div>
                 <p class="welcome">Velkommen til <b>FENTY Norge</b></p>
-                <p>Få alle de siste nyhetene om Rihannas seneste utgivelelser fra hennes Fenty univers</p>
+                <p class="tagline">Få alle de siste nyhetene om Rihannas seneste utgivelelser fra hennes Fenty univers
+                </p>
             </div>
             <div class="new-posts-site-info">
                 <div class="new-posts-site-info-header">
