Discography.html finished
+small updates on site

--- a/discography.html
+++ b/discography.html
@@ -15,7 +15,6 @@
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Inter:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
     <script type="module" src="js/Pages.js/index.js"></script>
-    <script type="module" src="js/components/mainMenu.js"></script>
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
     <!-- Hotjar Tracking Code for Fenty Norge -->
     <script>
@@ -45,8 +44,8 @@
                 <ul>
                     <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
-                    <li class="sub-menu-start" aria-haspopup="true" aria-expanded="false">VAREMERKER
-                        &#9660;
+                    <li class="sub-menu-start" aria-haspopup="true" aria-expanded="false"><a href="#">VAREMERKER
+                            &#9660;</a>
                         <ul class="sub-menu">
                             <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
                             <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
@@ -65,7 +64,296 @@
             <img class="page-header-img" src="/img/P10056222_2.avif" alt="bilde av Rihanna">
             <div class="about-text">
                 <h1>Rihannas musikk-katalog</h1>
-                <p>Litt om Rihannas katalog</p>
+                <h2>Rihanna har gjennom karrieren gitt ut 8 studioalbum. I starten fikk vi de ofte og levde på en
+                    konstant lykkerus med singler, album, konserter og turneer. Men, nå er det over 8 år siden hun ga ut
+                    ANTI...</h2>
+                <div class="brand-quick-info album">
+                    <p>Tittel: Music of the Sun</p>
+                    <p>Lansert: 2005</p>
+                </div>
+                <div class="album-info">
+                    <div class="tracklist">
+                        <p>Låter:</p>
+                        <ol>
+                            <li>Pon de Replay</li>
+                            <li>Here I go Again</li>
+                            <li>If it's Lovin' That You Want</li>
+                            <li>You Don't Love Me (No, No, No)</li>
+                            <li>That La, La, La</li>
+                            <li>The last time</li>
+                            <li>Willing To Wait</li>
+                            <li>Music Of The Sun</li>
+                            <li>Let Me</li>
+                            <li>Rush</li>
+                            <li>There's A Thug In My Life</li>
+                            <li>Now I Know</li>
+                            <li>Pon de Replay(Remix)</li>
+                            <li>Should I (Bonus låt)</li>
+                        </ol>
+                    </div>
+                    <div class="album-cover">
+                        <img class="cover-art" src="img/Rihanna_-_Music_of_the_Sun.png"
+                            alt="Album cover Music of The Sun">
+                    </div>
+                </div>
+
+                <div class="brand-quick-info album">
+                    <p>Tittel: A Girl Like Me</p>
+                    <p>Lansert: 2006</p>
+                </div>
+                <div class="album-info">
+                    <div class="tracklist">
+                        <p>Låter:</p>
+                        <ol>
+                            <li>SOS</li>
+                            <li>Kisses Don't Lie</li>
+                            <li>Unfaithful</li>
+                            <li>We Ride</li>
+                            <li>Dem Haters</li>
+                            <li>Final Goodbye</li>
+                            <li>Break It Off</li>
+                            <li>Crazy Little Thing Called Love</li>
+                            <li>Selfish Girl</li>
+                            <li>P.S. (I'm Still Not Over You)</li>
+                            <li>A Girl Like Me</li>
+                            <li>A Million Miles Away</li>
+                            <li>If It's Lovin' That You Want - Part 2</li>
+                        </ol>
+                    </div>
+                    <div class="album-cover">
+                        <img class="cover-art" src="img/A_Girl_like_Me_-_Rihanna.png" alt="Album cover A Girl Like Me">
+                    </div>
+                </div>
+
+                <div class="brand-quick-info album">
+                    <p>Tittel: Good Girl Gone Bad</p>
+                    <p>Lansert: 2007</p>
+                </div>
+                <div class="album-info">
+                    <div class="tracklist">
+                        <p>Låter:</p>
+                        <ol>
+                            <li>Umbrella</li>
+                            <li>Push Up On Me</li>
+                            <li>Don't Stop The Music</li>
+                            <li>Breakin' Dishes</li>
+                            <li>Shut up And Drive</li>
+                            <li>Hate That I Love You</li>
+                            <li>Say It</li>
+                            <li>Sell Me candy</li>
+                            <li>Lemme Get That</li>
+                            <li>Rehab</li>
+                            <li>Question Existing</li>
+                            <li>Good Girl Gone Bad</li>
+                        </ol>
+                    </div>
+                    <div class="album-cover">
+                        <img class="cover-art" src="img/Good_Girl_Gone_Bad.png" alt="Album cover Good Girl Gone Bad">
+                    </div>
+                </div>
+
+                <div class="brand-quick-info album">
+                    <p>Tittel: Good Girl Gone Bad: Reloaded</p>
+                    <p>Lansert: 2008</p>
+                </div>
+                <div class="album-info">
+                    <div class="tracklist">
+                        <p>Låter:</p>
+                        <ol>
+                            <li>Umbrella</li>
+                            <li>Push Up On Me</li>
+                            <li>Don't Stop The Music</li>
+                            <li>Breakin' Dishes</li>
+                            <li>Shut up And Drive</li>
+                            <li>Hate That I Love You</li>
+                            <li>Say It</li>
+                            <li>Sell Me candy</li>
+                            <li>Lemme Get That</li>
+                            <li>Rehab</li>
+                            <li>Question Existing</li>
+                            <li>Good Girl Gone Bad</li>
+                            <li>Disturbia : Reloaded</li>
+                            <li>Take a Bow : Reloaded</li>
+                            <li>If I Never See Your Face Again : Reloaded</li>
+                        </ol>
+                    </div>
+                    <div class="album-cover">
+                        <img class="cover-art" src="img/Rihanna_-_Good_Girl_Gone_Bad_Reloaded.png"
+                            alt="Album cover Good Girl Gone Bad: Reloaded">
+                    </div>
+                </div>
+
+                <div class="brand-quick-info album">
+                    <p>Tittel: Rated R</p>
+                    <p>Lansert: 2009</p>
+                </div>
+                <div class="album-info">
+                    <div class="tracklist">
+                        <p>Låter:</p>
+                        <ol>
+                            <li>Mad House</li>
+                            <li>Wait Your Turn</li>
+                            <li>Hard</li>
+                            <li>Stupid In Love</li>
+                            <li>Rockstar 101</li>
+                            <li>Russian Roulette</li>
+                            <li>Fire Bomb</li>
+                            <li>Rude Boy</li>
+                            <li>Photographs</li>
+                            <li>G4L</li>
+                            <li>Te Amo</li>
+                            <li>Cold Case Love</li>
+                            <li>The Last Song</li>
+                        </ol>
+                    </div>
+                    <div class="album-cover">
+                        <img class="cover-art" src="img/Rihanna_-_Rated_R.png" alt="Album cover Rated R">
+                    </div>
+                </div>
+
+                <div class="brand-quick-info album">
+                    <p>Tittel: Loud</p>
+                    <p>Lansert: 2010</p>
+                </div>
+                <div class="album-info">
+                    <div class="tracklist">
+                        <p>Låter:</p>
+                        <ol>
+                            <li>S&M</li>
+                            <li>What's My Name</li>
+                            <li>Cheers (Drink To that)</li>
+                            <li>Fading</li>
+                            <li>Only Girl (In the World)</li>
+                            <li>California King Bed</li>
+                            <li>Man Down</li>
+                            <li>Raining Men</li>
+                            <li>Complicated</li>
+                            <li>Skin</li>
+                            <li>Love The Way you Lie (Part 2)</li>
+                        </ol>
+                    </div>
+                    <div class="album-cover">
+                        <img class="cover-art" src="img/Rihanna_-_Loud.png" alt="Album cover Loud">
+                    </div>
+                </div>
+
+                <div class="brand-quick-info album">
+                    <p>Tittel: Talk That Talk</p>
+                    <p>Lansert: 2011</p>
+                </div>
+                <div class="album-info">
+                    <div class="tracklist">
+                        <p>Låter:</p>
+                        <ol>
+                            <li>You da One</li>
+                            <li>Where Have You Been</li>
+                            <li>We Found Love</li>
+                            <li>Talk That Talk</li>
+                            <li>Cockiness (Love It)</li>
+                            <li>Birthday Cake</li>
+                            <li>We All Want Love</li>
+                            <li>Drunk on Love</li>
+                            <li>Roc Me Out</li>
+                            <li>Watch n' Learn</li>
+                            <li>Farewell</li>
+                        </ol>
+                    </div>
+                    <div class="album-cover">
+                        <img class="cover-art" src="img/Rihanna_-_Talk_That_Talk_(standard).png"
+                            alt="Album cover Talk That Talk">
+                    </div>
+                </div>
+
+                <div class="brand-quick-info album">
+                    <p>Tittel: Talk That Talk (Deluxe)</p>
+                    <p>Lansert: 2011</p>
+                </div>
+                <div class="album-info">
+                    <div class="tracklist">
+                        <p>Låter:</p>
+                        <ol>
+                            <li>You da One</li>
+                            <li>Where Have You Been</li>
+                            <li>We Found Love</li>
+                            <li>Talk That Talk</li>
+                            <li>Cockiness (Love It)</li>
+                            <li>Birthday Cake</li>
+                            <li>We All Want Love</li>
+                            <li>Drunk on Love</li>
+                            <li>Roc Me Out</li>
+                            <li>Watch n' Learn</li>
+                            <li>Farewell</li>
+                            <li>Red Lipstick</li>
+                            <li>Do Ya Thang</li>
+                            <li>Fool in Love</li>
+                        </ol>
+                    </div>
+                    <div class="album-cover">
+                        <img class="cover-art" src="img/Rihanna_-_Talk_That_Talk_(deluxe).jpg"
+                            alt="Album cover Talk That Talk Deluxe edition">
+                    </div>
+                </div>
+
+                <div class="brand-quick-info album">
+                    <p>Tittel: Unapologetic</p>
+                    <p>Lansert: 2012</p>
+                </div>
+                <div class="album-info">
+                    <div class="tracklist">
+                        <p>Låter:</p>
+                        <ol>
+                            <li>Phresh Out the Runway</li>
+                            <li>Diamonds</li>
+                            <li>Numb (med Eminem)</li>
+                            <li>Pour It Up</li>
+                            <li>Loveeeeeee Song (med Future)</li>
+                            <li>Jump</li>
+                            <li>Right Now (med David Guetta)</li>
+                            <li>What Now</li>
+                            <li>Stay (med Mikky Ekko)</li>
+                            <li>Nobody's Business (med Chris Brown)</li>
+                            <li>Love Without Tragedy / Mother Mary</li>
+                            <li>Get It Over With</li>
+                            <li>No Love Allowed</li>
+                            <li>Lost in Paradise</li>
+                            <li>Half of Me (Deluxe album låt)</li>
+                        </ol>
+                    </div>
+                    <div class="album-cover">
+                        <img class="cover-art" src="img/Rihanna_-_Unapologetic.jpg" alt="Album cover Unapologetic">
+                    </div>
+                </div>
+
+                <div class="brand-quick-info album">
+                    <p>Tittel: Anti</p>
+                    <p>Lansert: 2016</p>
+                </div>
+                <div class="album-info">
+                    <div class="tracklist">
+                        <p>Låter:</p>
+                        <ol>
+                            <li>Consideration (med SZA)</li>
+                            <li>James Joint</li>
+                            <li>Kiss It Better</li>
+                            <li>Work (med Drake)</li>
+                            <li>Desperado</li>
+                            <li>Woo</li>
+                            <li>Needed Me</li>
+                            <li>Yeah, I Said It</li>
+                            <li>Same Ol' Mistakes</li>
+                            <li>Never Ending</li>
+                            <li>Love on the Brain</li>
+                            <li>Higher</li>
+                            <li>Goodnight Gotham (Deluxe album bonuslåt)</li>
+                            <li>Pose (Deluxe album bonuslåt)</li>
+                            <li>Sex with Me (Deluxe album bonuslåt)</li>
+                        </ol>
+                    </div>
+                    <div class="album-cover">
+                        <img class="cover-art" src="img/Rihanna_-_Anti.png" alt="Album cover Anti">
+                    </div>
+                </div>
+
             </div>
 
         </div>
