--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
     <script type="module" src="js/fetchAPI/getPost.js"></script>
-    <script type="module" src="js/components/mainMenu.js"></script>
     <!-- Hotjar Tracking Code for Fenty Norge -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -46,8 +45,8 @@
                 <ul>
                     <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
-                    <li class="sub-menu-start" aria-haspopup="true" aria-expanded="false">VAREMERKER
-                        &#9660;
+                    <li class="sub-menu-start" aria-haspopup="true" aria-expanded="false"><a href="#">VAREMERKER
+                            &#9660;</a>
                         <ul class="sub-menu">
                             <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
                             <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
@@ -88,7 +87,7 @@
                         <div class="loader"></div>
                     </div>
                     <div class="right-arrow .disabled-arrow">
-                        <img src="/img/icons/arrow-right.png" alt="arrow rigth">
+                        <img src="/img/icons/arrow-right.png" alt="arrow right">
                     </div>
                 </div>
             </div>
@@ -125,7 +124,6 @@
                 <div class="load-more-section">
                     <p class="load-more load-more-link">Last inn flere innlegg</p>
                 </div>
-
             </div>
             <div class="sidebar">
                 <div class="filter-posts">
