--- a/single-post.html
+++ b/single-post.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
     <meta name="description"
-        content="Velkommen til Fenty Norge. Her finner du blog innlegg om Rihannas varemerker og lanseringer, i tillegg til nyheter om Rihanna">
+        content="Her finner du blog innlegg om Rihannas varemerker og lanseringer, i tillegg til nyheter om Rihanna">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog">
     <title>Fenty.no - blog post</title>
     <link rel="stylesheet" href="/css/index.css">
     <script type="module" src="/js/Pages.js/singlePost.js"></script>
-    <script type="module" src="js/components/mainMenu.js"></script>
+    <!-- <script type="module" src="/js/components/moreBlogPostsCarousel.js"></script> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -46,8 +46,8 @@
                 <ul>
                     <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
-                    <li class="sub-menu-start" aria-haspopup="true" aria-expanded="false">VAREMERKER
-                        &#9660;
+                    <li class="sub-menu-start" aria-haspopup="true" aria-expanded="false"><a href="#">VAREMERKER
+                            &#9660;</a>
                         <ul class="sub-menu">
                             <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
                             <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
@@ -77,6 +77,11 @@
                         <div class="form-error"></div>
                     </div>
                     <div class="input-control">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                        <div class="form-error"></div>
+                    </div>
+                    <div class="input-control">
                         <label for="comment">Kommentar:</label>
                         <textarea id="comment" name="comment"
                             placeholder="Skriv kommentaren din her (minimum 4 karakterer)" required></textarea>
@@ -92,6 +97,13 @@
                     </div>
                 </div>
             </section>
+            <div class="more-blog-post-carousel">
+                <h4>Sjekk ut flere blogg innlegg</h4>
+                <div class="more-blog-posts-carousel-cards">
+                    <div class="loader"></div>
+                </div>
+            </div>
+        </div>
         </div>
 
 
