secure form fix, maybe
form was no secure

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
             <div class="contact-form-container">
 
                 <form id="contact-form"
-                    action="http://fenty.berremarte.no/wp-json/contact-form-7/v1/contact-forms/276/feedback"
+                    action="https://fenty.berremarte.no/wp-json/contact-form-7/v1/contact-forms/276/feedback"
                     method="post">
                     <div class="input-control">
                         <label for="your-name" id="name-label">Navn*</label>
