--- a/category.html
+++ b/category.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
-    <meta name="description" content="Her finner du blog innlegg som matcher kaegorien du valgte">
+    <meta name="description" content="Her finner du blog innlegg som matcher kategorien du valgte">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, kategori">
     <title>Fenty.no - Category: </title>
     <link rel="stylesheet" href="/css/index.css">
@@ -75,11 +75,12 @@
                 <div class="footer-menu">
                     <p>Kjøp Fenty fra butikker uten toll:</p>
                     <ul>
-                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty">Fredrikoglouisa.no</a>
+                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty"
+                                target="_blank">Fredrikoglouisa.no</a>
                         </li>
-                        <li><a href="https://www.sephora.se/sok/?q=fenty">Sephora.se</a></li>
-                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma">eu.Puma.com</a></li>
-                        <li><a href="https://fentybeauty.com">Fentybeauty.com</a></li>
+                        <li><a href="https://www.sephora.se/sok/?q=fenty" target="_blank">Sephora.se</a></li>
+                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma" target="_blank">eu.Puma.com</a></li>
+                        <li><a href="https://fentybeauty.com" target="_blank">Fentybeauty.com</a></li>
                     </ul>
                 </div>
             </div>
@@ -92,10 +93,10 @@
             <div class="right-footer">
                 <p>Følg oss</p>
                 <div class="social-media">
-                    <div class="instagram"><a href="https://instagram.com/fentynorge" aria-label="instagram link"><i
-                                class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="twitter"><a href="https://x.com/fentynorge" aria-label="Twitter/X link"><i
-                                class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
+                    <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
+                            aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
+                    <div class="twitter"><a href="https://x.com/fentynorge" target="_blank"
+                            aria-label="Twitter/X link"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
                 </div>
             </div>
         </div>
