--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marte Lilleberre">
     <meta name="description"
-        content="Velkommen til Fenty Norge. Her kan du sende inn et kontakt-skjema om du har noen spørsmål">
+        content="Har du spørsmpål? Her kan du sende inn et kontaktskjema om du lurer på, eller savner, noe.">
     <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, kontakt, spørsmål, svar">
     <title>Fenty.no - Kontakt</title>
     <link rel="stylesheet" href="/css/index.css">
@@ -72,7 +72,6 @@
             </div>
             <div class="contact-form-container">
 
-
                 <form id="contact-form"
                     action="https://fenty.berremarte.no/wp-json/contact-form-7/v1/contact-forms/276/feedback"
                     method="post">
@@ -110,38 +109,6 @@
                     </fieldset>
                 </form>
 
-                <!-- <form id="form" action="/" novalidate>
-                    <fieldset aria-labelledby="form-legend">
-                        <legend>Fyll ut skjemaet</legend>
-                        <div class="input-control">
-                            <label for="name">Navn:*</label>
-                            <input type="text" name="name" id="name" placeholder="Navn på over 5 karakterer.." required>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="input-control">
-                            <label for="email">Email:*</label>
-                            <input type="email" name="email" id="email" placeholder="Skriv inn din email adresse her.."
-                                required>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="input-control">
-                            <label for="subject">Emne:*</label>
-                            <input type="text" name="subject" id="subject"
-                                placeholder="Emnet må være på over 15 karkaterer.." required>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="input-control">
-                            <label for="message">Melding:*</label>
-                            <textarea name="message" id="message"
-                                placeholder="Meldingen din må være på over 25 karakterer.." required></textarea>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="submit-form">
-                            <label for="submit">Send inn kontaktskjema:</label>
-                            <button type="submit" id="submit">Send inn kontaktskjema</button>
-                        </div>
-                    </fieldset>
-                </form> -->
             </div>
         </div>
     </main>
@@ -151,11 +118,12 @@
                 <div class="footer-menu">
                     <p>Kjøp Fenty fra butikker uten toll:</p>
                     <ul>
-                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty">Fredrikoglouisa.no</a>
+                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty"
+                                target="_blank">Fredrikoglouisa.no</a>
                         </li>
-                        <li><a href="https://www.sephora.se/sok/?q=fenty">Sephora.se</a></li>
-                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma">eu.Puma.com</a></li>
-                        <li><a href="https://fentybeauty.com">Fentybeauty.com</a></li>
+                        <li><a href="https://www.sephora.se/sok/?q=fenty" target="_blank">Sephora.se</a></li>
+                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma" target="_blank">eu.Puma.com</a></li>
+                        <li><a href="https://fentybeauty.com" target="_blank">Fentybeauty.com</a></li>
                     </ul>
                 </div>
             </div>
@@ -168,10 +136,10 @@
             <div class="right-footer">
                 <p>Følg oss</p>
                 <div class="social-media">
-                    <div class="instagram"><a href="https://instagram.com/fentynorge" aria-label="instagram link"><i
-                                class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="twitter"><a href="https://x.com/fentynorge" aria-label="Twitter/X link"><i
-                                class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
+                    <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
+                            aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
+                    <div class="twitter"><a href="https://x.com/fentynorge" target="_blank"
+                            aria-label="Twitter/X link"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
                 </div>
             </div>
         </div>
