--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -72,7 +72,7 @@
                     <p>Lansert USA: 2017</p>
                     <p>Lansert Norge: 2021</p>
                     <p>CEO: Robyn Rihanna Fenty</p>
-                    <p>Hjemmeside: <a href="https://www.fentybeauty.com">www.fentybeauty.com</a></p>
+                    <p>Hjemmeside: <a href="https://www.fentybeauty.com" target="_blank">www.fentybeauty.com</a></p>
                 </div>
                 <p>Fenty Beauty tok markedet med storm og ble raskt en storselger, dette hadde nok mye med det faktum at
                     merket ville skape noe for alle. Inklusiviteten med 40 foundation nyanser ved lansering fylte
@@ -99,11 +99,12 @@
                 <div class="footer-menu">
                     <p>Kjøp Fenty fra butikker uten toll:</p>
                     <ul>
-                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty">Fredrikoglouisa.no</a>
+                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty"
+                                target="_blank">Fredrikoglouisa.no</a>
                         </li>
-                        <li><a href="https://www.sephora.se/sok/?q=fenty">Sephora.se</a></li>
-                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma">eu.Puma.com</a></li>
-                        <li><a href="https://fentybeauty.com">Fentybeauty.com</a></li>
+                        <li><a href="https://www.sephora.se/sok/?q=fenty" target="_blank">Sephora.se</a></li>
+                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma" target="_blank">eu.Puma.com</a></li>
+                        <li><a href="https://fentybeauty.com" target="_blank">Fentybeauty.com</a></li>
                     </ul>
                 </div>
             </div>
@@ -115,9 +116,9 @@
             </div>
             <div class="right-footer">
                 <p>Følg oss</p>
-                <div class="instagram"><a href="https://instagram.com/fentynorge" aria-label="instagram link"><i
-                            class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                <div class="twitter"><a href="https://x.com/fentynorge" aria-label="Twitter/X link"><i
+                <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
+                        aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
+                <div class="twitter"><a href="https://x.com/fentynorge" target="_blank" aria-label="Twitter/X link"><i
                             class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
             </div>
         </div>
