--- a/fenty-skin.html
+++ b/fenty-skin.html
@@ -71,7 +71,7 @@
                     <p>Lansert USA: 2020</p>
                     <p>Lansert Norge: 2021</p>
                     <p>CEO: Robyn Rihanna Fenty</p>
-                    <p>Hjemmeside: <a href="https://www.fentyskin.com">www.fentyskin.com</a></p>
+                    <p>Hjemmeside: <a href="https://www.fentyskin.com" target="_blank">www.fentyskin.com</a></p>
                 </div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/aP0IYMwOZ8U?si=OmqC7LbFVculmGSX"
                     title="YouTube video player" frameborder="0"
@@ -86,11 +86,12 @@
                 <div class="footer-menu">
                     <p>Kjøp Fenty fra butikker uten toll:</p>
                     <ul>
-                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty">Fredrikoglouisa.no</a>
+                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty"
+                                target="_blank">Fredrikoglouisa.no</a>
                         </li>
-                        <li><a href="https://www.sephora.se/sok/?q=fenty">Sephora.se</a></li>
-                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma">eu.Puma.com</a></li>
-                        <li><a href="https://fentybeauty.com">Fentybeauty.com</a></li>
+                        <li><a href="https://www.sephora.se/sok/?q=fenty" target="_blank">Sephora.se</a></li>
+                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma" target="_blank">eu.Puma.com</a></li>
+                        <li><a href="https://fentybeauty.com" target="_blank">Fentybeauty.com</a></li>
                     </ul>
                 </div>
             </div>
@@ -103,10 +104,10 @@
             <div class="right-footer">
                 <p>Følg oss</p>
                 <div class="social-media">
-                    <div class="instagram"><a href="https://instagram.com/fentynorge" aria-label="instagram link"><i
-                                class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="twitter"><a href="https://x.com/fentynorge" aria-label="Twitter/X link"><i
-                                class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
+                    <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
+                            aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
+                    <div class="twitter"><a href="https://x.com/fentynorge" target="_blank"
+                            aria-label="Twitter/X link"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
                 </div>
             </div>
         </div>
