--- a/savagex.html
+++ b/savagex.html
@@ -72,7 +72,7 @@
                 <div class="brand-quick-info">
                     <p>Lansert USA: 2018</p>
                     <p>CEO: Hillary Super, etter Robyn Rihanna Fenty gikk av i 2023</p>
-                    <p>Hjemmeside: <a href="https://www.savagex.com">www.SavageX.com</a></p>
+                    <p>Hjemmeside: <a href="https://www.savagex.com" target="_blank">www.SavageX.com</a></p>
                 </div>
 
                 <p>Hjemmesiden ble lansert 11.mai 2018, sammen med en pop-up butikk i Brooklyn, New York. I senere tid
@@ -100,11 +100,12 @@
                 <div class="footer-menu">
                     <p>Kjøp Fenty fra butikker uten toll:</p>
                     <ul>
-                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty">Fredrikoglouisa.no</a>
+                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty"
+                                target="_blank">Fredrikoglouisa.no</a>
                         </li>
-                        <li><a href="https://www.sephora.se/sok/?q=fenty">Sephora.se</a></li>
-                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma">eu.Puma.com</a></li>
-                        <li><a href="https://fentybeauty.com">Fentybeauty.com</a></li>
+                        <li><a href="https://www.sephora.se/sok/?q=fenty" target="_blank">Sephora.se</a></li>
+                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma" target="_blank">eu.Puma.com</a></li>
+                        <li><a href="https://fentybeauty.com" target="_blank">Fentybeauty.com</a></li>
                     </ul>
                 </div>
             </div>
@@ -117,10 +118,10 @@
             <div class="right-footer">
                 <p>Følg oss</p>
                 <div class="social-media">
-                    <div class="instagram"><a href="https://instagram.com/fentynorge" aria-label="instagram link"><i
-                                class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="twitter"><a href="https://x.com/fentynorge" aria-label="Twitter/X link"><i
-                                class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
+                    <div class="instagram"><a href="https://instagram.com/fentynorge" target="_blank"
+                            aria-label="instagram link"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
+                    <div class="twitter"><a href="https://x.com/fentynorge" target="_blank"
+                            aria-label="Twitter/X link"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
                 </div>
             </div>
         </div>
